# Python-Player-Vita

./: .gitignore  CMakeLists.txt  README.md  generate_bindings.sh
bindings/: pib.i  vita2d.i
bindings/NativeAPI/: audiodec.i  audioenc.i  audioin.i  audioout.i  avplayer.i  camera.i  common_dialog.i  ctrl.i  display.i  gxm.i  motion.i  power.i  pspnet_adhoc.i  pspnet_adhocctl.i  sysmodule.i  touch.i
bindings/NativeAPI/kernel/: modulemgr.i  threadmgr.i
bindings/NativeAPI/net/: net.i  netctl.i
bindings/OpenGL/: EGL.i  GLES2.i
bindings/SDL2/: SDL2.i  SDL_image.i  SDL_mixer.i  SDL_net.i  SDL_ttf.i
ppv/: CMakeLists.txt
ppv/src/: main.c  main.py
ppv/src/modules/: graphics.c
src/: main.c  main.py
src/c_modules/ppv/graphics/: gxm.c  vita2d.c
src/py_modules/ppv/: __init__.py
src/py_modules/ppv/graphics/: __init__.py
